<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kampus Map</string>
    <string name="show_map">Show Map Location</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">My Map</string>
    <string name="location_edit">Input Location</string>
    <string name="map_button">Map</string>
    <string name="search_button">Search</string>
    <string name="location_button">My Location</string>
    <string name="title_activity_latitude">Latitude</string>
    <string name="map_description">Show map</string>
    <string name="location_description">Show your current position</string>
    <string name="search_description">Search desire location</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="title_activity_university">UniversityActivity</string>
    <string name="university_name">Kampus</string>
    <string name="university_description">Lengkap</string>
    <string name="university_address">Alamat</string>
    <string name="university_details">Keterangan</string>
    <string name="university_phone">Office Phone</string>
    <string name="university_details_header">Detail Map</string>
    <string name="address_on_map">Alamat:</string>
    <string name="distance_on_map">Jarak:</string>

</resources>