<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="1dp">
    
    <ImageButton
        android:id="@+id/location_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/latitude_icon"
        android:background="#ffffff"
        android:contentDescription="@string/location_description" />
    
    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/location_button"
        android:src="@drawable/map_icon"
        android:background="#ffffff"
        android:contentDescription="@string/map_description" />

	<ImageButton
		android:id="@+id/search_button"
		android:onClick="search"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@id/map_button"
		android:layout_width="45dp"
		android:layout_height="45dp"
		android:src="@drawable/search"
		android:background="#ffffff"
		android:contentDescription="@string/search_description" />
	
	<EditText
		android:id="@+id/location_input"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@id/search_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/location_edit" />

</RelativeLayout>
